# ejercicios-2018-facuribetti

./: CMakeLists.txt
Repaso-Parcial/: CMakeLists.txt  README.md
Repaso-Parcial/2/: 2-1.cpp  2-3.cpp
Repaso-Parcial/2/Cola/: ColaPrioridad.h  README.md
Repaso-Parcial/Ej-01/: Ejercicio-1.cpp  Lista.h
Repaso-Parcial/Ej-02/: Ejercicio-2.cpp
Repaso-Parcial/Ej-03/: Ejercicio-3.cpp
Repaso-Parcial/Ej-04/: Ejercicio-4.cpp  Lista.h  nodo.h
Repaso-Parcial/Ej-05/: Ejercicio-5.cpp  Pila.h
Repaso-Parcial/Parcial-2016/: 2016-2.cpp  2016-3.cpp
Repaso-Parcial/Parcial-2019/: CMakeLists.txt
Repaso-Parcial/Parcial-2019/EJ-1/: main.cpp
Repaso-Parcial/Parcial-2019/EJ-2/: main.cpp
Repaso-Parcial/Parcial-2019/EJ-3/: main.cpp
Repaso-Parcial/Parcial-2019/EJ-4/: main.cpp
Repaso-Parcial/Parcial-2019/Lista/: Lista.h
U00_Repaso/: CMakeLists.txt  README.md
U00_Repaso/Ej-01/: Circulo.h  Color.h  Cuadrado.h  Geometria.h  Triangulo.h  main.cpp
U00_Repaso/Ej-02/: Calculadora.h  main.cpp
U00_Repaso/Ej-03/: Calculadora.h  main.cpp
U00_Repaso/Ej-04/: main.cpp
U00_Repaso/Ej-05/: Entero.h  main.cpp
U00_Repaso/Ej-06/: main.cpp
U01_Recursividad/: CMakeLists.txt  README.md
U01_Recursividad/Ej-01/: main.cpp  potencia.cpp  potencia.h
U01_Recursividad/Ej-02/: main.cpp  sumatoria.cpp  sumatoria.h
U02_Listas/: CMakeLists.txt  README.md
U03_Pilas/: CMakeLists.txt  README.md
U04_Colas/: CMakeLists.txt  README.md
U05_Arbol/: CMakeLists.txt
U06_Hash/: CMakeLists.txt
U07_Grafos/: CMakeLists.txt
U09_Busqueda/: CMakeLists.txt  README.md
test/: CMakeLists.txt
(+107 files in other folders)
