add_executable(Repaso-1 Ej-01/Ejercicio-1.cpp)

add_executable(Repaso-2 Ej-02/Ejercicio-2.cpp)

add_executable(Repaso-3 Ej-03/Ejercicio-3.cpp)

add_executable(Repaso-4 Ej-04/Ejercicio-4.cpp)

add_executable(Repaso-5 Ej-05/Ejercicio-5.cpp)

add_executable(2016-1 Parcial-2016/2016-1.cpp)

add_executable(2016-2 Parcial-2016/2016-2.cpp)

add_executable(2016-3 Parcial-2016/2016-3.cpp)

add_executable(2-1 2/2-1.cpp)

add_executable(2-3 2/2-3.cpp)